syntax = "proto3";
package upgrade;

import "nic/delphi/proto/delphi/delphi.proto";

enum UpgReqType {
    InvalidCmd = 0;
    UpgStart   = 1;
    UpgAbort   = 2;
}

enum UpgRespType {
    UpgPass   = 0;
    UpgFail   = 1;
}

// Upgrade Request Status
enum UpgReqStateType {
    UpgReqRcvd                     = 0;
    PreUpgState                    = 1;
    ProcessesQuiesced              = 2;
    PostBinRestart                 = 3;
    DataplaneDowntimePhase1Start   = 4;
    DataplaneDowntimePhase2Start   = 5;
    Cleanup                        = 6;
    UpgSuccess                     = 7;
    UpgFailed                      = 8;
    UpgStateTerminal               = 9;
}

// Upgrade Request Status
enum UpgRespStateType {
    UpgReqRcvdPass                     = 0;
    UpgReqRcvdFail                     = 1;
    PreUpgStatePass                    = 2;
    PreUpgStateFail                    = 3;
    ProcessesQuiescedPass              = 4;
    ProcessesQuiescedFail              = 5;
    PostBinRestartPass                 = 6;
    PostBinRestartFail                 = 7;
    DataplaneDowntimePhase1StartPass   = 8;
    DataplaneDowntimePhase1StartFail   = 9;
    DataplaneDowntimePhase2StartPass   = 10;
    DataplaneDowntimePhase2StartFail   = 11;
    CleanupPass                        = 12;
    CleanupFail                        = 13;
    UpgSuccessPass                     = 14;
    UpgSuccessFail                     = 15;
    UpgFailedPass                      = 16;
    UpgFailedFail                      = 17;
}

enum UpgType {
    UpgTypeDisruptive            = 0;
    UpgTypeNonDisruptive         = 1;
}

// spec part of the object
message UpgReq {
    option (delphi.update_event) = true;
    delphi.ObjectMeta          Meta            = 1;
    uint32                     Key             = 2;
    UpgReqType                 UpgReqCmd       = 3 [(delphi.event) = true];
}

message UpgResp {
    option (delphi.update_event) = true;
    delphi.ObjectMeta          Meta            = 1;
    uint32                     Key             = 2;
    UpgRespType                UpgRespVal      = 3 [(delphi.event) = true];
    repeated string            UpgRespFailStr  = 4;
}

// status part of the object
message UpgStateReq {
    option (delphi.update_event) = true; 
    delphi.ObjectMeta      Meta              = 1;
    uint32                 Key               = 2;
    UpgReqStateType        UpgReqState       = 3 [(delphi.event) = true];
    UpgType                UpgReqType        = 4 [(delphi.event) = true];
}

message UpgAppResp {
    option (delphi.update_event) = true;
    delphi.ObjectMeta      Meta              = 1;
    string                 Key               = 2;
    UpgRespStateType       UpgAppRespVal     = 3 [(delphi.event) = true];
    string                 UpgAppRespStr     = 4;
}

